fix(blog): improved spacing

--- a/src/index.css
+++ b/src/index.css
@@ -56,5 +56,5 @@ button.btn {
 }
 
 .embedded-content {
-  @apply flex flex-col gap-2;
+  @apply flex flex-col gap-6;
 }
